--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.3",
-        "symfony/framework-bundle": "2.1.*"
+        "symfony/framework-bundle": ">=2.1,<2.3"
     },
     "autoload": {
         "psr-0": {
