--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3",
-        "symfony/framework-bundle": ">=2.1,<2.3"
+        "php": "~5.3",
+        "symfony/framework-bundle": "~2.1"
     },
     "autoload": {
         "psr-0": {
