--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
     ],
     "require": {
         "php": "~5.3",
-        "symfony/framework-bundle": "~2.1"
+        "symfony/assetic-bundle": "~2.3",
+        "symfony/finder": "~2.3",
+        "symfony/framework-bundle": "~2.3"
     },
     "autoload": {
         "psr-0": {
@@ -24,5 +26,8 @@
         "branch-alias": {
             "dev-master": "1.0.x-dev"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~3.7"
     }
 }
