--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,15 @@ php:
   - 5.5
 
 env:
+  - SYMFONY_VERSION=2.1.*
   - SYMFONY_VERSION=2.2.*
   - SYMFONY_VERSION=2.3.*
   - SYMFONY_VERSION=2.4.*
   - SYMFONY_VERSION=dev-master
+
+matrix:
+    allow_failures:
+        - env: SYMFONY_VERSION=dev-master
 
 before_script:
   - composer require symfony/framework-bundle:${SYMFONY_VERSION} --prefer-source
