--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,39 @@
 language: php
 
 php:
-  - 5.3
-  - 5.4
-  - 5.5
+    - 5.3
+    - 5.4
+    - 5.5
+    - 5.6
+    - 7.0
+    - hhvm
 
 env:
-  - SYMFONY_VERSION=2.1.*
-  - SYMFONY_VERSION=2.2.*
-  - SYMFONY_VERSION=2.3.*
-  - SYMFONY_VERSION=2.4.*
-  - SYMFONY_VERSION=dev-master
+    - SYMFONY_VERSION="~2.3.0"
+    - SYMFONY_VERSION="~2.4.0"
+    - SYMFONY_VERSION="~2.5.0"
+    - SYMFONY_VERSION="~2.6.0"
+    - SYMFONY_VERSION="~2.7.0"
+    - SYMFONY_VERSION="dev-master"
 
 matrix:
+    fast_finish: true
     allow_failures:
-        - env: SYMFONY_VERSION=dev-master
+        - php: 7.0
+        - php: hhvm
+        - env: SYMFONY_VERSION="dev-master"
+    exclude:
+        # Symfony 3.x requires PHP 5.5
+        - php: 5.3
+          env: SYMFONY_VERSION="dev-master"
+        - php: 5.4
+          env: SYMFONY_VERSION="dev-master"
+
+sudo: false
 
 before_script:
-  - composer require symfony/framework-bundle:${SYMFONY_VERSION} --prefer-source
-  - composer install --dev --prefer-source
+    - curl -s http://getcomposer.org/installer | php
+    - php composer.phar require --no-update symfony/symfony:${SYMFONY_VERSION}
+    - php composer.phar install --prefer-source
 
 script: vendor/bin/phpunit --colors --coverage-text
