--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "havvg/jasmine-bundle",
     "description": "This bundles provides utilities to work with Jasmine.",
-    "keywords": [ "jasmine", "javascript", "testing" ],
+    "keywords": ["jasmine", "javascript", "testing"],
     "type": "symfony-bundle",
     "license": "MIT",
     "authors": [
@@ -12,22 +12,21 @@
     ],
     "require": {
         "php": "~5.3",
-        "symfony/assetic-bundle": "~2.1",
-        "symfony/finder": "~2.1",
-        "symfony/framework-bundle": "~2.1"
+        "symfony/assetic-bundle": "~2.3",
+        "symfony/finder": "~2.3",
+        "symfony/framework-bundle": "~2.3"
     },
     "autoload": {
-        "psr-0": {
-            "Havvg\\Bundle\\JasmineBundle": ""
+        "psr-4": {
+            "Havvg\\Bundle\\JasmineBundle\\": ""
         }
     },
-    "target-dir": "Havvg/Bundle/JasmineBundle",
     "extra": {
         "branch-alias": {
             "dev-master": "1.0.x-dev"
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "~3.7"
+        "phpunit/phpunit": "~4.0"
     }
 }
